--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.2.1",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/recharts": "^1.8.29",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
@@ -23,6 +24,7 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
